# toshiki-gptbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  boot.sh  config.example.json  docker-compose.yml
.github/workflows/: docker-publish.yml  release.yml
src/: config.rs  lib.rs  main.rs  module_mgr.rs
src/modules/admin/: member_mgr.rs  mod.rs
