[package]
name = "tkgpt"
version = "0.0.1"
edition = "2021"
authors = ["@andatoshiki <hello@toshiki.dev>"]
categories = ["telegram-bot"]
description = "Toshiki's ChatGPT bot for Telegram with all-in-one as your efficient daily AI assistant with convenience at ease."
keywords = ["devops", "notifications", "monitoring", "dashboard", "alerting"]
license = "MIT"
readme = "README.md"

[lib]
name = "tkgpt_core"
path = "src/lib.rs"

[[bin]]
name = "tkgpt"
path = "src/main.rs"
doc = false

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
codegen-units = 1
strip = true

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
async-openai = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1"
rusqlite = { version="0.28", features = ["bundled"] }
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
clap = { version = "4.0", features = ["derive"] }
pulldown-cmark = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9.83"